WIP - DO NOT MERGE
- Added banner for webinars (present and future)
- CSS support for IE10, IE11, Edge
- Fixed URL bug for demo

--- a/www/source/index.html.slim
+++ b/www/source/index.html.slim
@@ -14,23 +14,16 @@ header.blue-gradient.margin-top-offset
    canvas.particles-js-canvas-el /
   /! style for callout icons
   .row
-    .icon.shadow.code-trigger
-      img src="/images/open-close.svg" /
+    .icon.shadow
+      img src="/images/circ-arrow.svg" /
       
 /! Surprise Code example
 .code-pop
   .strict-center
-    p.code.code-demo.code-pop-animate
-      span.code-attribute
-        | describe 
-      | code
-      span.code-attribute
-        |  do it
-      |  { should be_inspec }
-      span.code-attribute
-        |  end
-
-      
+    p.t-white
+      | Upcoming Webinar: Testing at the Edges
+    a href="https://events.chef.io/events/testing-at-the-edges/"  View the Event
+    
 /! Second Content
 .row.margin-both
   .large-9.medium-9.columns data-enllax-ratio=".1" data-enllax-type="foreground"
@@ -141,7 +134,7 @@ header.blue-gradient.margin-top-offset
             br/
             span.code-attribute end
 
-          a.btn.strict-right.t-white.try-demo.mobile-hide Try the Demo     
+          a.btn.strict-right.t-white.try-demo.mobile-hide href="http://inspec.io/tutorial" Try the Demo     
     /! Next row
     .row
       .large-6.medium-6.columns.margin-under-xs data-enllax-ratio=".1" data-enllax-type="foreground" 
@@ -213,6 +206,6 @@ header.blue-gradient.margin-top-offset
             |  { should be_listening }
             br/
             span.code-attribute   end
-          a.btn.strict-right.t-white.try-demo.mobile-hide Try the Demo
+          a.btn.strict-right.t-white.try-demo.mobile-hide href="http://inspec.io/tutorial" Try the Demo
 
       
