--- a/www/source/layouts/_nav.slim
+++ b/www/source/layouts/_nav.slim
@@ -19,45 +19,6 @@ nav#main-nav
         </a>
         span.fa.fa-angle-right.t-purple.toggle.mobile-show
 
-          
-            
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/cli/"
-          span.main-nav--link-text inspec executable
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/profiles/"
-          span.main-nav--link-text Profiles
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/resources/"
-          span.main-nav--link-text Resources
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/matchers/"
-          span.main-nav--link-text Matchers
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/dsl_inspec/"
-          span.main-nav--link-text InSpec DSL
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/dsl_resource/"
-          span.main-nav--link-text Resource DSL
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/plugin_kitchen_inspec/"
-          span.main-nav--link-text kitchen-inspec
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/shell/"
-          span.main-nav--link-text inspec shell
-          
-      li.main-nav--link.docs--inside--link
-        a href="/docs/reference/ruby_usage/"
-          span.main-nav--link-text Ruby usage
-          
-  
 
       li.main-nav--link.hide-docs
         <a href="/community" class="#{'t-purple' if current_page.url == '/community'}" <span class="main-nav--link-text">Community</span>
@@ -67,7 +28,7 @@ nav#main-nav
           i.fa.fa-github-alt
           span.main-nav--link-text Github
       li.main-nav--link.mobile-hide
-        a.btn.try-demo href="#" Try the Demo
+        a.btn.try-demo href="http://inspec.io/tutorial" Try the Demo
       li.main-nav--link.hide-docs
         a.btn href="https://downloads.chef.io/inspec" 
           i.fa.fa-cloud-download
