--- a/www/source/stylesheets/_layout.scss
+++ b/www/source/stylesheets/_layout.scss
@@ -258,7 +258,7 @@
 	             	rgba(58, 162, 206, 1) 83.94%,
 	             	rgba(58, 142, 206, 1) 100%
 	             );
-	background : -webkit-gradient(linear,100% -14.24% ,56.15% 114.24% ,color-stop(0,rgba(99, 206, 153, 1) ),color-stop(0.0833,rgba(91, 201, 163, 1) ),color-stop(0.3664,rgba(67, 185, 194, 1) ),color-stop(0.5248,rgba(58, 179, 206, 1) ),color-stop(0.6793,rgba(58, 175, 206, 1) ),color-stop(0.8394,rgba(58, 162, 206, 1) ),color-stop(1,rgba(58, 142, 206, 1) ));
+	background : linear-gradient(linear,100% -14.24% ,56.15% 114.24% ,color-stop(0,rgba(99, 206, 153, 1) ),color-stop(0.0833,rgba(91, 201, 163, 1) ),color-stop(0.3664,rgba(67, 185, 194, 1) ),color-stop(0.5248,rgba(58, 179, 206, 1) ),color-stop(0.6793,rgba(58, 175, 206, 1) ),color-stop(0.8394,rgba(58, 162, 206, 1) ),color-stop(1,rgba(58, 142, 206, 1) ));
 	background : -webkit-linear-gradient(
 	             	-80deg,
 	             	rgba(99, 206, 153, 1) 0%,
@@ -270,6 +270,15 @@
 	             	rgba(58, 142, 206, 1) 100%
 
 	             );
+		 background : linear-gradient(
+	 	             	-80deg,
+	 	             	rgba(67, 185, 194, 1) 36.64%,
+	 	             	rgba(58, 179, 206, 1) 52.48%,
+	 	             	rgba(58, 175, 206, 1) 67.93%,
+	 	             	rgba(58, 162, 206, 1) 83.94%,
+	 	             	rgba(58, 142, 206, 1) 100%
+
+	 	             );
 }
 
 // form
