Changes to relative path, update event info

--- a/www/source/downloads.html.slim
+++ b/www/source/downloads.html.slim
@@ -4,4 +4,4 @@ title: InSpec - Downloads
 
 javascript:
 
-  location.replace("http://downloads.chef.io");
+  location.replace("http://downloads.chef.io/inspec");
