--- a/www/source/index.html.slim
+++ b/www/source/index.html.slim
@@ -21,8 +21,8 @@ header.blue-gradient.margin-top-offset
 .code-pop
   .strict-center
     p.t-white
-      | Upcoming Webinar: Testing at the Edges
-    a href="https://events.chef.io/events/testing-at-the-edges/"  View the Event
+      | Hartford Compliance Automation: InSpec + Chef Automate
+    a href="https://events.chef.io/events/hartford-compliance-automation-inspec-chef-automate/"  View the Event
     
 /! Second Content
 .row.margin-both
@@ -134,7 +134,7 @@ header.blue-gradient.margin-top-offset
             br/
             span.code-attribute end
 
-          a.btn.strict-right.t-white.try-demo.mobile-hide href="http://inspec.io/tutorial" Try the Demo     
+          a.btn.strict-right.t-white.try-demo.mobile-hide href="/tutorial" Try the Demo     
     /! Next row
     .row
       .large-6.medium-6.columns.margin-under-xs data-enllax-ratio=".1" data-enllax-type="foreground" 
@@ -206,6 +206,6 @@ header.blue-gradient.margin-top-offset
             |  { should be_listening }
             br/
             span.code-attribute   end
-          a.btn.strict-right.t-white.try-demo.mobile-hide href="http://inspec.io/tutorial" Try the Demo
+          a.btn.strict-right.t-white.try-demo.mobile-hide href="/tutorial" Try the Demo
 
       
