--- a/www/source/layouts/_footer.slim
+++ b/www/source/layouts/_footer.slim
@@ -4,7 +4,7 @@ footer#main-footer.dark-bg
     h3.t-white.margin-top-xs.txt-margin See how it works in less than 10 minutes!
 
     .row.margin-top-xs
-      a.btn.t-white.try-demo.hide-for-small-only href="http://inspec.io/tutorial" Try the Demo
+      a.btn.t-white.try-demo.hide-for-small-only href="/tutorial" Try the Demo
       a.btn.t-white href="https://downloads.chef.io/inspec"
         i.fa.fa-cloud-download
         span Download
