--- a/www/source/layouts/_nav.slim
+++ b/www/source/layouts/_nav.slim
@@ -25,7 +25,7 @@ nav#main-nav
           i.fa.fa-github-alt
           span.main-nav--link-text Github
       li.main-nav--link.nav-cta.hide-for-small-only
-        a.btn.try-demo href="http://inspec.io/tutorial" Try the Demo
+        a.btn.try-demo href="/tutorial" Try the Demo
       li.main-nav--link.nav-cta
         a.btn href="https://downloads.chef.io/inspec" 
           i.fa.fa-cloud-download
